@@ -1,6 +1,7 @@
 package org.prebid.server.bidder.nextmillennium;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.iab.openrtb.request.App;
 import com.iab.openrtb.request.Banner;
 import com.iab.openrtb.request.BidRequest;
@@ -11,7 +12,7 @@ import com.iab.openrtb.request.Site;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
 import org.prebid.server.bidder.model.BidderCall;
@@ -27,6 +28,7 @@ import org.prebid.server.proto.openrtb.ext.request.ExtStoredRequest;
 import org.prebid.server.proto.openrtb.ext.request.nextmillennium.ExtImpNextMillennium;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.UnaryOperator;
 
@@ -41,11 +43,13 @@ public class NextMillenniumBidderTest extends VertxTest {
 
     private static final String ENDPOINT_URL = "https://test-url.com/";
 
-    private final NextMillenniumBidder target = new NextMillenniumBidder(ENDPOINT_URL, jacksonMapper);
+    private final NextMillenniumBidder target =
+            new NextMillenniumBidder(ENDPOINT_URL, jacksonMapper, List.of("valueOne", "valueTwo"));
 
     @Test
     public void creationShouldFailOnInvalidEndpointUrl() {
-        assertThatIllegalArgumentException().isThrownBy(() -> new NextMillenniumBidder("invalid_url", jacksonMapper));
+        assertThatIllegalArgumentException().isThrownBy(() ->
+                new NextMillenniumBidder("invalid_url", jacksonMapper, List.of("valueOne", "valueTwo")));
     }
 
     @Test
@@ -254,11 +258,29 @@ public class NextMillenniumBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeBidsShouldReturnBannerBidByDefault() throws JsonProcessingException {
+    public void makeHttpRequestsShouldReturnImpExtNextMillenniumWhenNmmFlagsConfigured() {
+        // given
+        final BidRequest bidRequest = givenBidRequest(identity(),
+                givenImpWithExt(identity(), ExtImpNextMillennium.of("placement1", "group1")));
+
+        // when
+        final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
+
+        // then
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getValue())
+                .extracting(HttpRequest::getPayload)
+                .flatExtracting(BidRequest::getImp)
+                .extracting(Imp::getExt)
+                .containsExactly(createImpExt(List.of("valueOne", "valueTwo")));
+    }
+
+    @Test
+    public void makeBidsShouldReturnBannerBidWhenMTypeIsOne() throws JsonProcessingException {
         // given
         final BidRequest bidRequest = givenBidRequest(identity());
         final BidderCall<BidRequest> httpCall = givenHttpCall(bidRequest,
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.impid("123"))));
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.mtype(1).impid("123"))));
 
         // when
         final Result<List<BidderBid>> result = target.makeBids(httpCall, bidRequest);
@@ -266,7 +288,76 @@ public class NextMillenniumBidderTest extends VertxTest {
         // then
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getValue())
-                .containsExactly(BidderBid.of(Bid.builder().impid("123").build(), BidType.banner, "USD"));
+                .containsExactly(BidderBid.of(Bid.builder().mtype(1).impid("123").build(),
+                        BidType.banner, "USD"));
+    }
+
+    @Test
+    public void makeBidsShouldReturnVideoBidWhenMTypeIsTwo() throws JsonProcessingException {
+        // given
+        final BidRequest bidRequest = givenBidRequest(identity());
+        final BidderCall<BidRequest> httpCall = givenHttpCall(bidRequest,
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.mtype(2).impid("123"))));
+
+        // when
+        final Result<List<BidderBid>> result = target.makeBids(httpCall, bidRequest);
+
+        // then
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getValue())
+                .containsExactly(BidderBid.of(Bid.builder().mtype(2).impid("123").build(),
+                        BidType.video, "USD"));
+    }
+
+    @Test
+    public void makeBidsShouldReturnErrorWhenMTypeIsUnknown() throws JsonProcessingException {
+        // given
+        final BidRequest bidRequest = givenBidRequest(identity());
+        final BidderCall<BidRequest> httpCall = givenHttpCall(bidRequest,
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.mtype(999).impid("123"))));
+
+        // when
+        final Result<List<BidderBid>> result = target.makeBids(httpCall, bidRequest);
+
+        // then
+        assertThat(result.getErrors())
+                .contains(BidderError.badServerResponse("Unable to fetch mediaType 999 in multi-format: 123"));
+        assertThat(result.getValue()).isEmpty();
+    }
+
+    @Test
+    public void makeBidsShouldReturnErrorWhenMTypeIsMissing() throws JsonProcessingException {
+        // given
+        final BidRequest bidRequest = givenBidRequest(identity());
+        final BidderCall<BidRequest> httpCall = givenHttpCall(bidRequest,
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.id("bidId").impid("123"))));
+
+        // when
+        final Result<List<BidderBid>> result = target.makeBids(httpCall, bidRequest);
+
+        // then
+        assertThat(result.getErrors()).contains(BidderError.badServerResponse("Missing MType for bid: bidId"));
+        assertThat(result.getValue()).isEmpty();
+    }
+
+    @Test
+    public void makeBidsShouldReturnBothValidAndInvalidBidderBidAtTheSameTime() throws JsonProcessingException {
+        // given
+        final BidRequest bidRequest = givenBidRequest(identity());
+        final BidderCall<BidRequest> httpCall = givenHttpCall(givenBidRequest(identity()),
+                mapper.writeValueAsString(givenBidResponse(
+                        bidBuilder -> bidBuilder.mtype(999).impid("123"),
+                        bidBuilder -> bidBuilder.mtype(1).impid("312"))));
+
+        // when
+        final Result<List<BidderBid>> result = target.makeBids(httpCall, bidRequest);
+
+        // then
+        assertThat(result.getErrors())
+                .contains(BidderError.badServerResponse("Unable to fetch mediaType 999 in multi-format: 123"));
+        assertThat(result.getValue())
+                .containsExactly(BidderBid.of(Bid.builder().mtype(1).impid("312").build(),
+                        BidType.banner, "USD"));
     }
 
     @Test
@@ -351,7 +442,7 @@ public class NextMillenniumBidderTest extends VertxTest {
         assertThat(result.getValue())
                 .extracting(HttpRequest::getPayload)
                 .extracting(BidRequest::getImp)
-                .extracting(imps -> imps.get(0))
+                .extracting(imps -> imps.getFirst())
                 .extracting(Imp::getExt)
                 .isNotEqualTo(givenImp.getExt())
                 .extracting(jsonNodes -> mapper.treeToValue(jsonNodes, ExtRequest.class))
@@ -396,7 +487,7 @@ public class NextMillenniumBidderTest extends VertxTest {
         assertThat(result.getValue())
                 .extracting(HttpRequest::getPayload)
                 .extracting(BidRequest::getImp)
-                .extracting(imps -> imps.get(0))
+                .extracting(imps -> imps.getFirst())
                 .element(0)
                 .usingRecursiveComparison()
                 .ignoringFields("ext")
@@ -455,12 +546,15 @@ public class NextMillenniumBidderTest extends VertxTest {
         return impCustomizer.apply(Imp.builder()).build();
     }
 
-    private static BidResponse givenBidResponse(UnaryOperator<Bid.BidBuilder> bidCustomizer) {
+    @SafeVarargs
+    private static BidResponse givenBidResponse(UnaryOperator<Bid.BidBuilder>... bidCustomizers) {
         return BidResponse.builder()
-                .seatbid(singletonList(SeatBid.builder()
-                        .bid(singletonList(bidCustomizer.apply(Bid.builder()).build()))
-                        .build()))
                 .cur("USD")
+                .seatbid(singletonList(SeatBid.builder()
+                        .bid(Arrays.stream(bidCustomizers)
+                                .map(bidCustomizer -> bidCustomizer.apply(Bid.builder()).build())
+                                .toList())
+                        .build()))
                 .build();
     }
 
@@ -477,4 +571,12 @@ public class NextMillenniumBidderTest extends VertxTest {
                 ExtPrebid.of(null, extImpNextMillennium))))::apply);
     }
 
+    private static ObjectNode createImpExt(List<String> values) {
+        final ObjectNode objectNode = mapper.createObjectNode();
+        objectNode.set("prebid", mapper.valueToTree(ExtRequestPrebid.builder()
+                .storedrequest(ExtStoredRequest.of("ggroup1;;")).build()));
+        objectNode.putObject("nextMillennium")
+                .set("nmmFlags", mapper.valueToTree(values));
+        return objectNode;
+    }
 }
