@@ -6,7 +6,7 @@ import com.fasterxml.jackson.databind.node.TextNode;
 import com.iab.openrtb.request.App;
 import com.iab.openrtb.request.Banner;
 import com.iab.openrtb.request.BidRequest;
-import com.iab.openrtb.request.Format;
+import com.iab.openrtb.request.Dooh;
 import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.request.Native;
 import com.iab.openrtb.request.Publisher;
@@ -18,12 +18,11 @@ import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
 import io.vertx.core.MultiMap;
 import org.apache.commons.lang3.ObjectUtils;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.prebid.server.VertxTest;
 import org.prebid.server.auction.model.Endpoint;
 import org.prebid.server.bidder.model.BidderBid;
@@ -43,7 +42,6 @@ import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebidServer;
 import org.prebid.server.proto.openrtb.ext.request.ExtSite;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
 import org.prebid.server.proto.openrtb.ext.request.smaato.ExtImpSmaato;
-import org.prebid.server.proto.openrtb.ext.response.ExtBidPrebid;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidPrebidVideo;
 import org.prebid.server.util.HttpUtil;
 
@@ -61,20 +59,19 @@ import static org.assertj.core.api.Assertions.tuple;
 import static org.mockito.Mockito.when;
 import static org.prebid.server.proto.openrtb.ext.response.BidType.banner;
 import static org.prebid.server.proto.openrtb.ext.response.BidType.video;
+import static org.prebid.server.proto.openrtb.ext.response.BidType.xNative;
 
+@ExtendWith(MockitoExtension.class)
 public class SmaatoBidderTest extends VertxTest {
 
     private static final String ENDPOINT_URL = "https://test.endpoint.com";
-
-    @Rule
-    public final MockitoRule mockitoRule = MockitoJUnit.rule();
 
     @Mock
     private Clock clock;
 
     private SmaatoBidder target;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         target = new SmaatoBidder(ENDPOINT_URL, jacksonMapper, clock);
     }
@@ -139,7 +136,7 @@ public class SmaatoBidderTest extends VertxTest {
                 .extracting(HttpRequest::getPayload)
                 .extracting(BidRequest::getExt)
                 .containsExactly(jacksonMapper.fillExtension(ExtRequest.empty(),
-                        SmaatoBidRequestExt.of("prebid_server_0.4")));
+                        SmaatoBidRequestExt.of("prebid_server_1.1")));
     }
 
     @Test
@@ -282,7 +279,7 @@ public class SmaatoBidderTest extends VertxTest {
         // then
         assertThat(result.getValue()).isEmpty();
         assertThat(result.getErrors())
-                .containsExactly(BidderError.badInput("Missing Site/App."));
+                .containsExactly(BidderError.badInput("Missing Site/App/DOOH."));
     }
 
     @Test
@@ -495,10 +492,31 @@ public class SmaatoBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeIndividualHttpRequestsShouldReturnErrorIfSiteAndAppAreAbsentInRequest() {
+    public void makeIndividualHttpRequestsShouldEnrichAppWithPublisherIdIfSiteAndAppAreAbsentAndDoohIsPresent() {
+        // given
+        final BidRequest bidRequest = givenBidRequest(
+                bidRequestBuilder -> bidRequestBuilder.site(null).app(null).dooh(Dooh.builder().build()),
+                impBuilder -> impBuilder.ext(mapper.valueToTree(ExtPrebid.of(null,
+                        ExtImpSmaato.of("publisherId", "adspaceId", null)))));
+
+        // when
+        final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
+
+        // then
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getValue())
+                .extracting(HttpRequest::getPayload)
+                .extracting(BidRequest::getDooh)
+                .extracting(Dooh::getPublisher)
+                .extracting(Publisher::getId)
+                .containsExactly("publisherId");
+    }
+
+    @Test
+    public void makeIndividualHttpRequestsShouldReturnErrorIfSiteAndAppAndDoohAreAbsentInRequest() {
         // given
         final BidRequest bidRequest = givenBidRequest(bidRequestBuilder ->
-                bidRequestBuilder.site(null).app(null), identity());
+                bidRequestBuilder.site(null).app(null).dooh(null), identity());
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
@@ -506,20 +524,7 @@ public class SmaatoBidderTest extends VertxTest {
         // then
         assertThat(result.getValue()).isEmpty();
         assertThat(result.getErrors())
-                .containsExactly(BidderError.badInput("Missing Site/App."));
-    }
-
-    @Test
-    public void makeIndividualHttpRequestsShouldReturnErrorIfBannerSizesAndFormatsAreAbsent() {
-        // given
-        final BidRequest bidRequest = givenBidRequest(impBuilder -> impBuilder.banner(Banner.builder().build()));
-
-        // when
-        final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
-
-        // then
-        assertThat(result.getValue()).isEmpty();
-        assertThat(result.getErrors()).containsExactly(BidderError.badInput("No sizes provided for Banner."));
+                .containsExactly(BidderError.badInput("Missing Site/App/DOOH."));
     }
 
     @Test
@@ -538,24 +543,6 @@ public class SmaatoBidderTest extends VertxTest {
                 .flatExtracting(BidRequest::getImp)
                 .extracting(Imp::getBanner)
                 .containsExactly(Banner.builder().w(1).h(1).build());
-    }
-
-    @Test
-    public void makeIndividualHttpRequestsShouldReplaceBannerSizesWithFirstFormatIfFormatsArePresent() {
-        // given
-        final Banner banner = Banner.builder().format(singletonList(Format.builder().w(2).h(2).build())).build();
-        final BidRequest bidRequest = givenBidRequest(impBuilder -> impBuilder.banner(banner));
-
-        // when
-        final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
-
-        // then
-        assertThat(result.getErrors()).isEmpty();
-        assertThat(result.getValue())
-                .extracting(HttpRequest::getPayload)
-                .flatExtracting(BidRequest::getImp)
-                .extracting(Imp::getBanner)
-                .containsExactly(banner.toBuilder().w(2).h(2).build());
     }
 
     @Test
@@ -612,8 +599,8 @@ public class SmaatoBidderTest extends VertxTest {
         // given
         final BidderCall<BidRequest> httpCall = givenHttpCall(
                 givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.id("test"))),
-                HttpUtil.headers());
+                givenBidResponse(bidBuilder -> bidBuilder.id("test")),
+                HttpUtil.headers().add("X-Smt-Adtype", "anyType"));
 
         // when
         final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
@@ -629,7 +616,7 @@ public class SmaatoBidderTest extends VertxTest {
         final MultiMap headers = MultiMap.caseInsensitiveMultiMap().set("X-Smt-Adtype", "anyType");
         final BidderCall<BidRequest> httpCall = givenHttpCall(
                 givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.adm("<?xml"))),
+                givenBidResponse(bidBuilder -> bidBuilder.adm("adm")),
                 headers);
 
         // when
@@ -645,10 +632,13 @@ public class SmaatoBidderTest extends VertxTest {
         // given
         when(clock.millis()).thenReturn(100L);
 
+        final MultiMap headers = MultiMap.caseInsensitiveMultiMap()
+                .set("X-Smt-Expires", String.valueOf(10000))
+                .set("X-Smt-Adtype", "Img");
         final BidderCall<BidRequest> httpCall = givenHttpCall(
                 givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.adm("<?xml"))),
-                MultiMap.caseInsensitiveMultiMap().set("X-Smt-Expires", String.valueOf(10000)));
+                givenBidResponse(bidBuilder -> bidBuilder.adm("adm")),
+                headers);
 
         // when
         final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
@@ -667,10 +657,14 @@ public class SmaatoBidderTest extends VertxTest {
         // given
         when(clock.millis()).thenReturn(999999L);
 
+        final MultiMap headers = MultiMap.caseInsensitiveMultiMap()
+                .set("X-Smt-Expires", String.valueOf(10000))
+                .set("X-Smt-Adtype", "Img");
+
         final BidderCall<BidRequest> httpCall = givenHttpCall(
                 givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.adm("<?xml"))),
-                MultiMap.caseInsensitiveMultiMap().set("X-Smt-Expires", String.valueOf(10000)));
+                givenBidResponse(bidBuilder -> bidBuilder.adm("adm")),
+                headers);
 
         // when
         final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
@@ -686,10 +680,11 @@ public class SmaatoBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldSetDefaultTtlIfExpirationHeaderIsAbsentInResponse() throws JsonProcessingException {
         // given
+        final MultiMap headers = MultiMap.caseInsensitiveMultiMap().set("X-Smt-Adtype", "Img");
         final BidderCall<BidRequest> httpCall = givenHttpCall(
                 givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.adm("<?xml"))),
-                MultiMap.caseInsensitiveMultiMap());
+                givenBidResponse(bidBuilder -> bidBuilder.adm("adm")),
+                headers);
 
         // when
         final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
@@ -707,7 +702,7 @@ public class SmaatoBidderTest extends VertxTest {
         // given
         final BidderCall<BidRequest> httpCall = givenHttpCall(
                 givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.adm("adm"))),
+                givenBidResponse(bidBuilder -> bidBuilder.adm("adm")),
                 MultiMap.caseInsensitiveMultiMap().set("X-Smt-Adtype", ""));
 
         // when
@@ -715,16 +710,16 @@ public class SmaatoBidderTest extends VertxTest {
 
         // then
         assertThat(result.getValue()).isEmpty();
-        assertThat(result.getErrors()).containsExactly(BidderError.badInput("Invalid ad markup adm."));
+        assertThat(result.getErrors()).containsExactly(BidderError.badInput("X-Smt-Adtype header is missing."));
     }
 
     @Test
-    public void makeBidsShouldReturnErrorIfAdmIsInvalid() throws JsonProcessingException {
+    public void makeBidsShouldReturnErrorIfNativeAdmIsInvalid() throws JsonProcessingException {
         // given
         final BidderCall<BidRequest> httpCall = givenHttpCall(
                 givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.adm("{\"image\": invalid"))),
-                MultiMap.caseInsensitiveMultiMap().set("X-Smt-Adtype", ""));
+                givenBidResponse(bidBuilder -> bidBuilder.adm("{\"image\": invalid")),
+                MultiMap.caseInsensitiveMultiMap().set("X-Smt-Adtype", "Native"));
 
         // when
         final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
@@ -732,12 +727,50 @@ public class SmaatoBidderTest extends VertxTest {
         // then
         assertThat(result.getValue()).isEmpty();
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Cannot decode bid.adm:");
-        assertThat(result.getErrors().get(0).getType()).isEqualTo(BidderError.Type.bad_input);
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("Cannot decode bid.adm:");
+        assertThat(result.getErrors().getFirst().getType()).isEqualTo(BidderError.Type.bad_input);
     }
 
     @Test
-    public void makeBidsShouldReturnCorrectBidIfAdMarkTypeIsReachmedia() throws JsonProcessingException {
+    public void makeBidsShouldReturnCorrectBidIfAdMarkTypeIsRichmedia() throws JsonProcessingException {
+        // given
+        final String adm = "{\"richmedia\":{\"mediadata\":"
+                + "{\"content\":\"<div>hello</div>\", \"w\":350,\"h\":50},\"impressiontrackers\":"
+                + "[\"//prebid-test.smaatolabs.net/track/imp/1\",\"//prebid-test.smaatolabs.net/track"
+                + "/imp/2\"],\"clicktrackers\":[\"//prebid-test.smaatolabs.net/track/click/1\","
+                + "\"//prebid-test.smaatolabs.net/track/click/2\"]}}";
+
+        final ObjectNode givenBidExt = mapper.valueToTree(SmaatoBidExt.of(100, List.of("curl1", "curl2")));
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
+                givenBidRequest(),
+                givenBidResponse(bidBuilder -> bidBuilder
+                        .adm(adm)
+                        .ext(givenBidExt)),
+                MultiMap.caseInsensitiveMultiMap().set("X-Smt-Adtype", "Richmedia"));
+
+        // when
+        final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
+
+        // then
+        final String expectedAdm =
+                "<div style=\"cursor:pointer\" onclick=\"fetch(decodeURIComponent('curl1'.replace(/\\+/g, ' ')), "
+                        + "{cache: 'no-cache'});fetch(decodeURIComponent('curl2'.replace(/\\+/g, ' ')), "
+                        + "{cache: 'no-cache'});\">" + adm + "</div>";
+
+        final Bid expectedBid = Bid.builder()
+                .impid("123")
+                .adm(expectedAdm)
+                .ext(givenBidExt)
+                .exp(300)
+                .build();
+
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getValue()).containsExactly(BidderBid.of(expectedBid, banner, "USD"));
+    }
+
+    @Test
+    public void makeBidsShouldReturnCorrectBidIfAdMarkTypeIsRichmediaAndCurlsAreAbsent()
+            throws JsonProcessingException {
         // given
         final String adm = "{\"richmedia\":{\"mediadata\":"
                 + "{\"content\":\"<div>hello</div>\", \"w\":350,\"h\":50},\"impressiontrackers\":"
@@ -747,108 +780,21 @@ public class SmaatoBidderTest extends VertxTest {
 
         final BidderCall<BidRequest> httpCall = givenHttpCall(
                 givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.adm(adm))),
+                givenBidResponse(bidBuilder -> bidBuilder.adm(adm)),
                 MultiMap.caseInsensitiveMultiMap().set("X-Smt-Adtype", "Richmedia"));
 
         // when
         final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
 
         // then
-        final String expectedAdm =
-                "<div onclick=\"fetch(decodeURIComponent('%2F%2Fprebid-test.smaatolabs.net%2Ftrack%2Fclick%2F1'),"
-                        + " {cache: 'no-cache'});fetch(decodeURIComponent('%2F%2Fprebid-test.smaatolabs.net%2Ftrack%2"
-                        + "Fclick%2F2'), {cache: 'no-cache'});\"><div>hello</div><img src=\"//prebid-test.smaatolabs."
-                        + "net/track/imp/1\" alt=\"\" width=\"0\" height=\"0\"/><img src=\"//prebid-test.smaatolabs."
-                        + "net/track/imp/2\" alt=\"\" width=\"0\" height=\"0\"/></div>";
-
         final Bid expectedBid = Bid.builder()
                 .impid("123")
-                .adm(expectedAdm)
-                .ext(mapper.valueToTree(ExtPrebid.of(ExtBidPrebid.builder().build(), null)))
+                .adm(adm)
                 .exp(300)
                 .build();
 
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getValue()).containsExactly(BidderBid.of(expectedBid, banner, "USD"));
-    }
-
-    @Test
-    public void makeBidsShouldReturnCorrectBidIfAdMarkTypeIsReachmediaAndAdTypeHeaderIsAbsent()
-            throws JsonProcessingException {
-        // given
-        final String adm = "{\"richmedia\":{\"mediadata\":"
-                + "{\"content\":\"<div>hello</div>\", \"w\":350,\"h\":50},\"impressiontrackers\":"
-                + "[\"//prebid-test.smaatolabs.net/track/imp/1\",\"//prebid-test.smaatolabs.net/track"
-                + "/imp/2\"],\"clicktrackers\":[\"//prebid-test.smaatolabs.net/track/click/1\","
-                + "\"//prebid-test.smaatolabs.net/track/click/2\"]}}";
-
-        final BidderCall<BidRequest> httpCall = givenHttpCall(
-                givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.adm(adm))),
-                MultiMap.caseInsensitiveMultiMap());
-
-        // when
-        final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
-
-        // then
-        final String expectedAdm =
-                "<div onclick=\"fetch(decodeURIComponent('%2F%2Fprebid-test.smaatolabs.net%2Ftrack%2Fclick%2F1'),"
-                        + " {cache: 'no-cache'});fetch(decodeURIComponent('%2F%2Fprebid-test.smaatolabs.net%2Ftrack%2"
-                        + "Fclick%2F2'), {cache: 'no-cache'});\"><div>hello</div><img src=\"//prebid-test.smaatolabs."
-                        + "net/track/imp/1\" alt=\"\" width=\"0\" height=\"0\"/><img src=\"//prebid-test.smaatolabs."
-                        + "net/track/imp/2\" alt=\"\" width=\"0\" height=\"0\"/></div>";
-
-        final Bid expectedBid = Bid.builder()
-                .impid("123")
-                .adm(expectedAdm)
-                .ext(mapper.valueToTree(ExtPrebid.of(ExtBidPrebid.builder().build(), null)))
-                .exp(300)
-                .build();
-
-        assertThat(result.getErrors()).isEmpty();
-        assertThat(result.getValue()).containsExactly(BidderBid.of(expectedBid, banner, "USD"));
-    }
-
-    @Test
-    public void makeBidsShouldReturnErrorIfAdMarkTypeIsReachmediaAndAdmIsEmpty()
-            throws JsonProcessingException {
-        // given
-        final BidderCall<BidRequest> httpCall = givenHttpCall(
-                givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.adm("{}"))),
-                MultiMap.caseInsensitiveMultiMap().set("X-Smt-Adtype", "Richmedia"));
-
-        // when
-        final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
-
-        // then
-        assertThat(result.getValue()).isEmpty();
-        assertThat(result.getErrors()).containsExactly(BidderError.badInput("bid.adm.richmedia is empty"));
-    }
-
-    @Test
-    public void makeBidsShouldReturnCorrectBidIfAdMarkTypeIsVideoAndAdTypeHeaderIsAbsent()
-            throws JsonProcessingException {
-        // given
-        final BidderCall<BidRequest> httpCall = givenHttpCall(
-                givenBidRequest(),
-                mapper.writeValueAsString(
-                        givenBidResponse(bidBuilder -> bidBuilder.adm("<?xml"))),
-                MultiMap.caseInsensitiveMultiMap());
-
-        // when
-        final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
-
-        // then
-        final Bid expectedBid = Bid.builder()
-                .impid("123")
-                .adm("Video")
-                .ext(mapper.valueToTree(ExtPrebid.of(ExtBidPrebid.builder().build(), null)))
-                .exp(300)
-                .build();
-
-        assertThat(result.getErrors()).isEmpty();
-        assertThat(result.getValue()).containsExactly(BidderBid.of(expectedBid, video, "USD"));
     }
 
     @Test
@@ -861,9 +807,12 @@ public class SmaatoBidderTest extends VertxTest {
                 + "imp/2\"],\"clicktrackers\":[\"//prebid-test.smaatolabs.net/track/click/1\",\""
                 + "//prebid-test.smaatolabs.net/track/click/2\"]}}";
 
+        final ObjectNode givenBidExt = mapper.valueToTree(SmaatoBidExt.of(100, List.of("curl1", "curl2")));
         final BidderCall<BidRequest> httpCall = givenHttpCall(
                 givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.adm(adm))),
+                givenBidResponse(bidBuilder -> bidBuilder
+                        .adm(adm)
+                        .ext(givenBidExt)),
                 MultiMap.caseInsensitiveMultiMap().set("X-Smt-Adtype", "Img"));
 
         // when
@@ -871,20 +820,15 @@ public class SmaatoBidderTest extends VertxTest {
 
         // then
         final String expectedAdm =
-                "<div style=\"cursor:pointer\" onclick=\"fetch(decodeURIComponent('%2F%2Fprebid-test.smaatolabs."
-                        + "net%2Ftrack%2Fclick%2F1'.replace(/\\+/g, ' ')), {cache: 'no-cache'});fetch"
-                        + "(decodeURIComponent('%2F%2Fprebid-test.smaatolabs.net%2Ftrack%2Fclick%2F2'.replace(/\\+/g,"
-                        + " ' ')), {cache: 'no-cache'});;window.open(decodeURIComponent('%2F%2Fprebid-test.smaatolabs."
-                        + "net%2Ftrack%2Fctaurl%2F1'.replace(/\\+/g, ' ')));\"><img src=\"//prebid-test.smaatolabs.net"
-                        + "/img/320x50.jpg\" width=\"350\" height=\"50\"/><img src=\"//prebid-test.smaatolabs.net/"
-                        + "track/imp/1\" alt=\"\" width=\"0\" height=\"0\"/><img src=\"//prebid-test.smaatolabs.net/"
-                        + "track/imp/2\" alt=\"\" width=\"0\" height=\"0\"/></div>";
+                "<div style=\"cursor:pointer\" onclick=\"fetch(decodeURIComponent('curl1'.replace(/\\+/g, ' ')), "
+                        + "{cache: 'no-cache'});fetch(decodeURIComponent('curl2'.replace(/\\+/g, ' ')), "
+                        + "{cache: 'no-cache'});\">" + adm + "</div>";
 
         final Bid expectedBid = Bid.builder()
                 .impid("123")
                 .adm(expectedAdm)
-                .ext(mapper.valueToTree(ExtPrebid.of(ExtBidPrebid.builder().build(), null)))
                 .exp(300)
+                .ext(givenBidExt)
                 .build();
 
         assertThat(result.getErrors()).isEmpty();
@@ -892,7 +836,7 @@ public class SmaatoBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeBidsShouldReturnCorrectBidIfAdMarkTypeIsImgAndParametersAreEmpty() throws JsonProcessingException {
+    public void makeBidsShouldReturnCorrectBidIfAdMarkTypeIsImgAndCurlsAreEmpty() throws JsonProcessingException {
         // given
         final String adm = "{\"image\":{\"img\":{\"url\":\""
                 + "//prebid-test.smaatolabs.net/img/320x50.jpg\",\"ctaurl\":\""
@@ -903,27 +847,16 @@ public class SmaatoBidderTest extends VertxTest {
 
         final BidderCall<BidRequest> httpCall = givenHttpCall(
                 givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder.adm(adm))),
+                givenBidResponse(bidBuilder -> bidBuilder.adm(adm)),
                 MultiMap.caseInsensitiveMultiMap().set("X-Smt-Adtype", "Img"));
 
         // when
         final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
 
         // then
-        final String expectedAdm =
-                "<div style=\"cursor:pointer\" onclick=\"fetch(decodeURIComponent('%2F%2Fprebid-test.smaatolabs."
-                        + "net%2Ftrack%2Fclick%2F1'.replace(/\\+/g, ' ')), {cache: 'no-cache'});fetch"
-                        + "(decodeURIComponent('%2F%2Fprebid-test.smaatolabs.net%2Ftrack%2Fclick%2F2'.replace(/\\+/g,"
-                        + " ' ')), {cache: 'no-cache'});;window.open(decodeURIComponent('%2F%2Fprebid-test.smaatolabs."
-                        + "net%2Ftrack%2Fctaurl%2F1'.replace(/\\+/g, ' ')));\"><img src=\"//prebid-test.smaatolabs.net"
-                        + "/img/320x50.jpg\" width=\"0\" height=\"0\"/><img src=\"//prebid-test.smaatolabs.net/"
-                        + "track/imp/1\" alt=\"\" width=\"0\" height=\"0\"/><img src=\"//prebid-test.smaatolabs.net/"
-                        + "track/imp/2\" alt=\"\" width=\"0\" height=\"0\"/></div>";
-
         final Bid expectedBid = Bid.builder()
                 .impid("123")
-                .adm(expectedAdm)
-                .ext(mapper.valueToTree(ExtPrebid.of(ExtBidPrebid.builder().build(), null)))
+                .adm(adm)
                 .exp(300)
                 .build();
 
@@ -934,14 +867,16 @@ public class SmaatoBidderTest extends VertxTest {
     @Test
     public void makeBidsShouldReturnCorrectBidIfAdMarkTypeIsVideo() throws JsonProcessingException {
         // given
+        final String adm = "<?xml version=\"1.0\" encoding="
+                + "\"UTF-8\" standalone=\"no\"?><VAST version=\"2.0\"></VAST>";
+
+        final ObjectNode givenBidExt = mapper.valueToTree(SmaatoBidExt.of(100, List.of()));
         final BidderCall<BidRequest> httpCall = givenHttpCall(
                 givenBidRequest(),
-                mapper.writeValueAsString(givenBidResponse(bidBuilder ->
-                        bidBuilder
-                                .adm("<?xml version=\"1.0\" encoding="
-                                        + "\"UTF-8\" standalone=\"no\"?><VAST version=\"2.0\"></VAST>")
-                                .cat(singletonList("Category1"))
-                                .ext(mapper.valueToTree(SmaatoBidExt.of(100))))),
+                givenBidResponse(bidBuilder -> bidBuilder
+                        .adm(adm)
+                        .cat(singletonList("Category1"))
+                        .ext(mapper.valueToTree(SmaatoBidExt.of(100, List.of())))),
                 MultiMap.caseInsensitiveMultiMap().set("X-SMT-ADTYPE", "Video"));
 
         // when
@@ -950,15 +885,55 @@ public class SmaatoBidderTest extends VertxTest {
         // then
         final Bid expectedBid = Bid.builder()
                 .impid("123")
-                .adm("Video")
+                .adm(adm)
                 .cat(singletonList("Category1"))
-                .ext(mapper.valueToTree(ExtPrebid.of(ExtBidPrebid.builder()
-                        .video(ExtBidPrebidVideo.of(100, "Category1")).build(), null)))
+                .ext(givenBidExt)
+                .exp(300)
+                .build();
+
+        final BidderBid expectedBidderBid = BidderBid.builder()
+                .bidCurrency("USD")
+                .type(video)
+                .bid(expectedBid)
+                .videoInfo(ExtBidPrebidVideo.of(100, "Category1"))
+                .build();
+
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getValue()).containsExactly(expectedBidderBid);
+    }
+
+    @Test
+    public void makeBidsShouldReturnCorrectBidIfAdMarkTypeIsNative() throws JsonProcessingException {
+        // given
+        final String adm = "{\"native\": {\"assets\":[{\"id\": 1, \"img\": {\"type\": 3, "
+                + "\"url\": \"https://smaato.com/image.png\", \"w\": 480, \"h\": 320}}], "
+                + "\"link\": {\"url\": \"https://www.smaato.com\"}}}";
+
+        final ObjectNode givenBidExt = mapper.valueToTree(SmaatoBidExt.of(100, List.of()));
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
+                givenBidRequest(),
+                givenBidResponse(bidBuilder -> bidBuilder
+                        .adm(adm)
+                        .ext(givenBidExt)),
+                MultiMap.caseInsensitiveMultiMap().set("X-SMT-ADTYPE", "Native"));
+
+        // when
+        final Result<List<BidderBid>> result = target.makeBids(httpCall, null);
+
+        // then
+
+        final String expectedAdm = "{\"assets\":[{\"id\":1,\"img\":{\"type\":3,"
+                + "\"url\":\"https://smaato.com/image.png\",\"w\":480,\"h\":320}}],"
+                + "\"link\":{\"url\":\"https://www.smaato.com\"}}";
+        final Bid expectedBid = Bid.builder()
+                .impid("123")
+                .adm(expectedAdm)
+                .ext(givenBidExt)
                 .exp(300)
                 .build();
 
         assertThat(result.getErrors()).isEmpty();
-        assertThat(result.getValue()).containsExactly(BidderBid.of(expectedBid, video, "USD"));
+        assertThat(result.getValue()).containsExactly(BidderBid.of(expectedBid, xNative, "USD"));
     }
 
     @Test
@@ -1033,13 +1008,15 @@ public class SmaatoBidderTest extends VertxTest {
                 .build();
     }
 
-    private static BidResponse givenBidResponse(UnaryOperator<Bid.BidBuilder> bidCustomizer) {
-        return BidResponse.builder()
+    private static String givenBidResponse(UnaryOperator<Bid.BidBuilder> bidCustomizer) throws
+            JsonProcessingException {
+
+        return mapper.writeValueAsString(BidResponse.builder()
                 .cur("USD")
                 .seatbid(singletonList(SeatBid.builder()
                         .bid(singletonList(bidCustomizer.apply(Bid.builder().impid("123")).build()))
                         .build()))
-                .build();
+                .build());
     }
 
     private static BidderCall<BidRequest> givenHttpCall(BidRequest bidRequest, String body, MultiMap headers) {
